# Osservatorio

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATOR_README.md  CONTRIBUTING.md  COPYRIGHT.txt  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.benchmark  ISSUE_TEMPLATES.md  LICENSE  LICENSE.data.txt  LICENSE.docs.txt  LICENSE.txt  Makefile  NOTICE.txt  PRE_PUSH_REPORT.md  PROJECT_AUDIT.md  PROJECT_STATE.md  README.md  SECURITY.md  TESTING.md  TESTING_STRATEGY.md  Tableau_Scraping_Strategy_for_ISTAT_Data.py  bandit-report.json  conversion_summary_20250715_152321.json  convert_to_powerbi.py  convert_to_tableau.py  data_101_148.xml  data_124_1157.xml  data_124_322.xml  dataflow_response.xml  (+41 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  dashboard-deploy.yml  deploy-landing-page.yml  performance-tests.yml
.streamlit/: config.toml
config/: pytest.ini
config/requirements/: base.txt  dev.txt
dashboard/: README.md  app.py  data_loader.py  index.html  requirements.txt
dashboard/web/: README.md  index.html
data/: performance_baselines.json
data/performance_results/: test_report.md
docs/: ARCHITECTURE.md  DATABASE_INTEGRATION_PLAN.md  GETTING_STARTED.md  README.md  REORGANIZATION_SUMMARY.md  SCALABILITY_ANALYSIS.md  SYSTEM_USAGE_GUIDE.md
docs/adr/: 001-database-selection.md
docs/api/: API_REFERENCE.md  FASTAPI_REST_API.md  PERFORMANCE_TESTING_SUITE.md  PRODUCTION_ISTAT_CLIENT.md  api-mapping.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  diagram.html
docs/core/: API_REFERENCE.md  ARCHITECTURE.md  DATAFLOW_ANALYZER_MODERNIZATION.md  DEPLOYMENT.md  PERFORMANCE.md
docs/deployment/: KUBERNETES_DEPLOYMENT_GUIDE.md  OPERATIONS_CHEATSHEET.md  README.md  TROUBLESHOOTING_GUIDE.md
docs/github/: github_discussions_kickoff.md
docs/guides/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DUCKDB_CLI_GUIDE.md  INGESTION_PIPELINE_GUIDE.md  JSON_SQLITE_MIGRATION_ROLLBACK.md  PERFORMANCE_TESTING.md  PRE_COMMIT_BEST_PRACTICES.md  STREAMLIT_DEPLOYMENT.md  TESTING.md
docs/integrations/: POWERBI_FASTAPI_CONNECTION.md  POWERBI_INTEGRATION.md  POWERBI_TEMPLATE_LESSONS.md
docs/licenses/: LICENSING_OVERVIEW.md
docs/migration/: ISTAT_API_MIGRATION.md
docs/planning/: SPRINT_ISSUES_SUMMARY.md  SUBTASK_DAY1.md  SUBTASK_DAY2.md
docs/project/: CLAUDE.md  DATAFLOW_K8S_REFACTOR_COMPLETED.md  DATAFLOW_K8S_REFACTOR_PLAN.md  DAY7_FINAL_REPORT.md  DAY8_FINAL_CLEANUP_REPORT.md  ISSUE_63_PREPARATION.md  PROJECT_STATE.md  RELEASE_V1_CRITERIA.md  REPOSITORY_CLEANUP_SUMMARY.md  ROADMAP.md
docs/scripts/: SCRIPT_USAGE_GUIDE.md
docs/security/: AUTHENTICATION.md  ENHANCED_RATE_LIMITING.md
examples/: README.md  duckdb_demo.py  duckdb_query_builder_demo.py  powerbi_integration_demo.py  real_istat_data.py  single_dataset.py  sqlite_metadata_demo.py
examples/examples/: README.md
istat_data/: 101_12.xml  124_1156.xml  124_1157.xml  158_149.xml  392_586.xml  56_1045.xml
k8s/examples/: deploy-all.yaml
k8s/helm-chart/: Chart.yaml  values.yaml
k8s/manifests/: backup-cronjob.yaml  backup-restore-job.yaml  configmap.yaml  deployment.yaml  hpa.yaml  namespaces.yaml  networkpolicy.yaml  pdb.yaml  pv-pvc.yaml  rbac-binding.yaml  rbac-role.yaml  rbac.yaml  secret.yaml  service-headless.yaml  service.yaml  storageclass.yaml
scripts/: README.md  __init__.py  analyze_data_formats.py  api_demo.py  benchmark_istat_client.py  cleanup_temp_files.py  create-issue.sh  create_sprint_issues.ps1  day5_migration_script.py  demo_pipeline.py  download_istat_data.ps1  full_system_test.py  generate_api_key.py  generate_test_data.py  health_check.py  migrate_json_to_sqlite.py  migrate_repository.py  organize_data_files.py  performance_regression_detector.py  production_pipeline_test.py  quick_test.py  run_performance_tests.py  scaling_stress_test.py  schedule_cleanup.py  security_audit.py  setup_for_collaborators.py  setup_powerbi_azure.py  standardize_imports.py  streamlit_app.py  test_ci.py  test_ci_quick.py  test_day5_strategy.py  test_powerbi_upload.py  test_real_data_processing.py  test_real_istat_data.py  utils.py  validate_issue29_implementation.py  validate_issue6_implementation.py  validate_powerbi_offline.py  validate_production_output.py  (+1 more)
scripts/legacy/: README.md  day5_migration_script.py  migrate_repository.py  test_ci_minimal.py  test_ci_quick.py  test_day5_strategy.py  validate_issue29_implementation.py  validate_issue6_implementation.py  validate_step1_2.py
security/: SECURITY_REPORT.md
security/reports/: bandit.json  pip_audit.json  safety.txt
src/analyzers/: dataflow_analyzer.py
src/api/: dataflow_analysis_api.py  dependencies.py  fastapi_app.py  fastapi_app_backup.py  health.py  istat_api.py  mock_istat_data.py  models.py  odata.py  powerbi_api.py  production_istat_client.py  security_dashboard.py  tableau_api.py  test_enhanced_dependencies.py
src/auth/: __init__.py  enhanced_rate_limiter.py  jwt_manager.py  jwt_manager_backup.py  models.py  rate_limiter.py  (+5 more)
tableau_output/: QUICK_START.txt  conversion_summary_20250715_155328.json  economia_101_12_20250715.csv  economia_101_12_20250715.xlsx  economia_163_156_20250715.csv  economia_163_156_20250715.xlsx  istruzione_124_1156_20250715.csv  istruzione_124_1156_20250715.json  istruzione_124_1156_20250715.xlsx  istruzione_124_1157_20250715.csv  istruzione_124_1157_20250715.json  istruzione_124_1157_20250715.xlsx  istruzione_158_149_20250715.csv  istruzione_158_149_20250715.xlsx  lavoro_151_1178_20250715.csv  lavoro_151_1178_20250715.xlsx  popolazione_22_293_20250715.xlsx  tableau_import_instructions_20250715_155328.md  territorio_392_586_20250715.csv  territorio_392_586_20250715.json  territorio_392_586_20250715.xlsx  territorio_56_1045_20250715.csv  territorio_56_1045_20250715.xlsx
tests/: conftest.py  test_export_functionality.py
(+167 files in other folders)
